# rag_test

./: .gitignore  CHANGELOG.md  CHROMADB_GREP_COMPARISON.md  CLAUDE.md  DATABASE_SAFETY.md  DEMO_INSTRUCTIONS.md  GREP_INTEGRATION_GUIDE.md  INTELLIGENT_GREP_INTEGRATION.md  QWEN.md  README.md  TUI_IMPROVEMENTS.md  chroma_backup_manager.py  demo_tui.py  example_integration.py  hf_cache_manager.py  hybrid_chromadb_grep_system.py  improve_retrieval.py  intelligent_grep_coordinator.py  pyproject.toml  rag_cli.py  rag_cli_refactored.py  requirements.txt  run_refactored.py  settings.json  system_prompt.md  system_prompt_improved.md  system_prompt_qwen.md  test_langchain_installation.py  text_extraction_demo.py
.github/workflows/: pylint.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
rag_cli/: README.md  __init__.py  main.py
rag_cli/config/: __init__.py  database_config.py  model_config.py  system_config.py  ui_config.py
rag_cli/core/: __init__.py  cache_manager.py  chat_history.py  chroma_manager.py  document_processor.py  embeddings_manager.py  error_handler.py  llm_manager.py  pdf_processor.py  query_executor.py  query_processor.py  rag_system.py  reranker_manager.py  retrieval_manager.py  settings_manager.py  vectorstore_manager.py
rag_cli/services/: __init__.py  chat_service.py  database_service.py  document_service.py  query_service.py  rag_service.py
rag_cli/ui/: __init__.py  app.py
rag_cli/ui/screens/: __init__.py  document_browser.py  help_screen.py  settings_screen.py
rag_cli/utils/: __init__.py  constants.py  decorators.py  defaults.py  error_utils.py  logger.py  logging_config.py
