[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.0",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.70",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.8",
    "ollama>=0.5.1",
    "pypdf>=5.8.0",
    "pyperclip>=1.9.0",
    "rich>=14.0.0",
    "sentence-transformers>=5.0.0",
    "textual>=4.0.0",
]
