[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies with explicit version constraints
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    # LangChain packages - compatible versions
    "langchain>=0.3.26,<0.4.0",
    "langchain-community>=0.3.27,<0.4.0",
    "langchain-core>=0.3.70,<0.4.0",
    "langchain-text-splitters>=0.3.8,<0.4.0",
    "langchain-openai>=0.3.28,<0.4.0",
    "langchain-anthropic>=0.3.0,<0.4.0",
    "langchain-huggingface>=0.3.0,<0.4.0",
    "langchain-chroma>=0.2.4,<0.4.0",
    "langchain-ollama>=0.3.5,<0.4.0",
    # Vector database and embeddings
    "chromadb>=1.0.15,<2.0.0",
    "sentence-transformers>=5.0.0,<6.0.0",
    # Document processing
    "pypdf>=5.8.0,<6.0.0",
    # UI and utilities
    "textual>=4.0.0,<5.0.0",
    "rich>=14.0.0,<15.0.0",
    "pyperclip>=1.9.0,<2.0.0",
    # Optional: Ollama client (for local models)
    "ollama>=0.5.1,<1.0.0",
    "mlx>=0.27.1",
    "mlx-lm>=0.26.0",
]
